# ompi

config/: orte_check_oar.m4
orte/mca/ras/oar/: Makefile.am  configure.m4  help-ras-oar.txt  ras_oar.h  ras_oar_component.c  ras_oar_module.c
